RESOLVED FIXED163304
Fix assertion when creating first WebCore::URL from non-main thread after r207162
https://bugs.webkit.org/show_bug.cgi?id=163304
Summary Fix assertion when creating first WebCore::URL from non-main thread after r20...
Alex Christensen
Reported 2016-10-11 16:23:22 PDT
Fix assertion when creating first WebCore::URL from non-main thread after r207162
Attachments
Patch (2.15 KB, patch)
2016-10-11 16:26 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2016-10-11 16:26:20 PDT
Alex Christensen
Comment 2 2016-10-11 16:27:43 PDT
Note You need to log in before you can comment on or make changes to this bug.